--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
     "react-scripts": "2.1.5",
-    "lodash": "^4.17.11"
+    "lodash": "^4.17.11",
+    "mathjs": "^5.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
